@@ -36,6 +36,7 @@
 - updated: (IMPORTANT) HTTP cache in dynamic content and static files
 - updated: `F.prototypes()` by adding `OperationOptions`
 - updated: ErrorHandling in schemas (supports inline validation and advanced conditions)
+- updated: `F.noCache()` is obsolete
 
 - renamed: `allow-handle-static-files` to `allow-static-files`
 
